# news-classification-workflow

./: .gitignore  README.md  pyproject.toml
components/: data_loader.py  mlflow_run.py  model_evaluator.py  model_trainer.py  model_validator.py  trainer.py
config/: config.yaml
configs/: serving.yaml  training.yaml
deployment/vertexai/: import_model.py  main.py
docker/: requirements.txt
docker/kfp-base/: Dockerfile  requirements.txt
docker/serving/: Dockerfile
docker/serving/app/: download_artifacts.py
docker/vertexai-serving/: requirements.txt
docker/vertexai-serving/src/: main.py
docker/webhook-creator/: requirements.txt
docker/webhook-creator/src/: main.py
docker/webhook-receiver/: Dockerfile  requirements.txt
docker/webhook-receiver/src/: helpers.py  main.py  verification.py
docker/webhook/src/: main.py
k8s/: webhook-creator-job.yaml
notebooks/: news-classification_v1.0.ipynb
pipelines/: training.py  training.yaml  training_pipeline.py  training_pipeline.yaml
serving/: deploy_model.py  main.py
utils/: misc.py
vertexai/: main.py
